[package]
name = "stablediffusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wgpu-backend"]
wgpu-backend = ["burn-wgpu"]
torch-backend = ["burn-tch", "tch"]

[dependencies.burn-wgpu]
package = "burn-wgpu"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies.burn-tch]
package = "burn-tch"
git = "https://github.com/burn-rs/burn.git"
optional = true

[dependencies]
serde = {version = "1.0.197", features = ["std", "derive"]}
num-traits = "0.2.18"
cfg-if = "1.0"

regex = "1.10.3"
image = "0.25.0"

burn = { git = "https://github.com/burn-rs/burn.git" }
burn-ndarray = { package = "burn-ndarray", git = "https://github.com/burn-rs/burn.git" }
burn-autodiff = { package = "burn-autodiff", git = "https://github.com/burn-rs/burn.git" }

tch = { version = "0.15.0", optional = true}
npy = { version = "0.4.0"}

rust_tokenizers = "8.1.1"
rayon = "1.10.0"
itertools = "0.12.1"
